# llm-batch

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: tests.yml
docs/: llm_nmt_survey.md
llm_batch/: __init__.py  cli.py  config.py  data_loader.py  engine.py  model_loader.py  output.py  template.py  utils.py
scripts/: eval_nmt.sh
templates/: nmt_ar2en.md  nmt_arabic_english.md  nmt_dialect.md  nmt_en2ar.md  summarization.md  system_nmt.txt  system_translator.txt
tests/: test_cli.py  test_config.py  test_data_loader.py  test_nmt_features.py  test_output.py  test_template.py  test_utils.py
